# aura-inspector

./: .gitignore  .vercelignore  AGENTS.md  Dockerfile  Dockerfile.mcp  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  requirements-ai.txt  requirements-mcp.txt  requirements-web.txt  requirements.txt  vercel.json
.github/: copilot-instructions.md
.github/instructions/: ai-development.instructions.md  python-cli.instructions.md
.github/prompts/: run-aura-scan.prompt.md
.github/skills/salesforce-experience-cloud-targeting/: SKILL.md
.github/workflows/: publish.yml
api/: index.py  requirements.txt
data/: aura_inspector.db
results/: AUTOFIX_REMEDIATION.md  scan-report.html
results/gql_records/: summary.txt
results/misc/: csp_trusted_sites.json  recordlists.json
results/records/: summary.txt
scripts/: validate_compile.py  validate_env.py
src/: aura_cli.py  aura_helper.py
src/ai_agents/: __init__.py  remediation_advisor.py  scan_agent.py
src/mcp/: server.py
src/scanners/: __init__.py  apex_scanner.py  aura_fuzzer.py  base_scanner.py  idor_scanner.py
src/ui/: __init__.py  app.py  oauth_handler.py
src/web/: __init__.py  auth.py  database.py  main.py  scan_runner.py
src/web/templates/: base.html  connected_apps.html  dashboard.html  home.html  login.html  register.html  report.html  scan_detail.html  scan_new.html  users_logs.html
tests/: conftest.py  test_apex_scanner.py  test_aura_fuzzer.py  test_base_scanner.py  test_idor_scanner.py  test_mcp_server.py  test_remediation_advisor.py  test_scan_agent.py
